# Den-Team

./: README.md
TargetRPiFiles/: TargetUpdateExecution.sh
challenge-mission-update-possible-with_uprotocol_target_provider/hpc_variant/ankaios/: state.yaml
challenge-mission-update-possible-with_uprotocol_target_provider/hpc_variant/samples/uprotocol_provider/: README.md  state.yaml  target.json  test_uprotocol_provider.sh
docs/design/: Datatypes.md
symphony-target-connection-rust/: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  NOTICE.md  README.md  target.json
symphony-target-connection-rust/safeguard_apps/: Vehicle_monitor.py  driver_consent.py  images_arm64.tar  mock_update_result_generator.py  push_update.sh
symphony-target-connection-rust/safeguard_apps/mock_ecu_updater/: main.py
symphony-target-connection-rust/src/: deployment_state.rs  main.rs
symphony-target-connection-rust/uservice/: asyncapi.yaml
