# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "ecu-updater"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/eclipse-uprotocol/symphony-target-example-rust"

[dependencies]
async-trait = { version = "0.1.89" }
backon = { version = "1.5", default-features = false, features = ["tokio-sleep"] }
clap = { version = "4.5", default-features = false, features = [
    "std",
    "derive",
    "env",
    "color",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }
clap-num = { version = "1.2" }
env_logger = { version = "0.11.8" }
log = { version = "0.4" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
symphony = { version = "0.1.3" }
tokio = { version = "1.44", features = ["signal"] }
up-rust = { version = "0.7", default-features = false, features = ["communication", "util"] }
up-transport-mqtt5 = { version = "0.3" }
up-transport-zenoh = { version = "0.8" }
